# Maths-Challenge-Quiz

./: .editorconfig  .gitignore  .markdownlint.json  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Instructions.md  Main.cpp  Makefile  README.md  main.cpp
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cmake.yml  make.yml
historic/: MCQ.smallbasic
include/: CMakeLists.txt  CommandLine.cpp  CommandLine.h  CommandLine.hpp  Constants.h  Constants.hpp  GameOver.cpp  GameOver.h  Round.cpp  Round.h  Scoring.cpp  Scoring.h  Scoring.hpp  Startup.cpp  Startup.h  Util.cpp  Util.h  startup.hpp  util.hpp
include/round/: ArithmeticRound.cpp  ArithmeticRound.h  ArithmeticRound.hpp  BaseRound.cpp  BaseRound.h  BaseRound.hpp  DilemmaRound.h  DilemmaRound.hpp  DivisionRound.cpp  DivisionRound.h  DivisionRound.hpp  MultiplicationRound.cpp  MultiplicationRound.h  MultiplicationRound.hpp  Round.h  RoundUtils.cpp  RoundUtils.h  RoundUtils.hpp  SkipRound.cpp  SkipRound.h  SkipRound.hpp  SpeedRound.cpp  SpeedRound.h  SpeedRound.hpp  arithmetic.hpp  base.hpp  dilemma.hpp  division.hpp  multiplication.hpp  round.hpp  roundutils.hpp  skip.hpp  speed.hpp
src/: CMakeLists.txt  CommandLine.cpp  Scoring.cpp  Startup.cpp  Util.cpp  cmdline.cpp  scoring.cpp  startup.cpp  util.cpp
src/round/: ArithmeticRound.cpp  BaseRound.cpp  DilemmaRound.cpp  DivisionRound.cpp  MultiplicationRound.cpp  RoundUtils.cpp  SkipRound.cpp  SpeedRound.cpp  arithmetic.cpp  base.cpp  dilemma.cpp  division.cpp  multiplication.cpp  skip.cpp  speed.cpp  utils.cpp
test/: CMakeLists.txt  Makefile  RunTests.cpp
